# greater-than-circuit

./: .gitignore  LICENSE  README.md  debug_patching.py  main.py  pyproject.toml  requirements.txt  run_hanna_analysis.py
notebooks/: quick_start_analysis.ipynb
results/data/: edge_cases.csv  test_examples.csv
results/reports/: analysis_summary.json  validation_report.txt
src/: __init__.py  activation_patching.py  circuit_analysis.py  circuit_validation.py  model_setup.py  prompt_design.py  prompt_design_hanna.py  visualization.py
tests/: test_activation_patching.py  test_circuit_analysis.py  test_model_setup.py
