[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greater-than-circuit"
version = "1.0.0"
description = "Reverse engineering the greater than circuit in GPT-2 Small using mechanistic interpretability"
authors = [{name = "Research Team", email = "contact@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "transformer-lens>=1.12.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "plotly>=5.14.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "black>=23.3.0",
    "flake8>=6.0.0",
    "jupyter>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/username/greater-than-circuit"
Documentation = "https://github.com/username/greater-than-circuit#readme"
Repository = "https://github.com/username/greater-than-circuit.git"
Issues = "https://github.com/username/greater-than-circuit/issues"